# understanding-clang-llvm

./: LICENSE  README.md
examples/: simple.c  simple_log.c
llvm_passes/: CMakeLists.txt  README.md
llvm_passes/FunctionIdentifier/: CMakeLists.txt
llvm_passes/InstrumentationPasses/: CMakeLists.txt
llvm_passes/InstrumentationPasses/LogMemAccess/: CMakeLists.txt
llvm_passes/InstrumentationPasses/LogMemAccess/src/: LogMemAccess.cpp
llvm_passes/StaticAnalysisPasses/: CMakeLists.txt
llvm_passes/StaticAnalysisPasses/FunctionIdentifier/src/: FunctionIdentifierPass.cpp
llvm_passes/StaticAnalysisPasses/GetLoopExitingBBs/: CMakeLists.txt
llvm_passes/StaticAnalysisPasses/GetLoopExitingBBs/src/: GetLoopExitingBBs.cpp
llvm_passes/StaticAnalysisPasses/StructAccessIdentifier/: CMakeLists.txt
llvm_passes/StaticAnalysisPasses/StructAccessIdentifier/src/: StructAccessIdentifier.cpp
